@@ -9,5 +9,6 @@ config.log
 config.status
 configure
 stamp-h1
+stamp-h.in
 regexxer-*.tar.bz2
 regexxer-*.tar.gz
